# elastic-local-compute

./: .gitignore  README.md  setup.sh
backend/: pyproject.toml
backend/src/: __init__.py  config.py  main.py
docs/: Architecture.md  Requirements.md
